# AutoDesktop

./: com.github.yuri6037.AutoDesktop.json  meson.build
data/: com.github.yuri6037.AutoDesktop.appdata.xml.in  com.github.yuri6037.AutoDesktop.desktop.in  com.github.yuri6037.AutoDesktop.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: autodesktop-window.c  autodesktop-window.h  autodesktop-window.ui  autodesktop.gresource.xml  main.c  meson.build
